processed/jira/txt/LU/LU-11744.txt
Key:        LU-11744
Summary:    Unusual client build failure on CentOS 7.6
Link:       https://jira.whamcloud.com/browse/LU-11744
Type:       Bug
Priority:   Minor
Status:     Open
Resolution: Unresolved
Assignee:   WC Triage
Reporter:   Patrick Farrell
Created:    Sun, 9 Dec 2018 23:45:36 +0000
Updated:    Sun, 9 Dec 2018 23:47:29 +0000

--- Description ---
I'm having an unusual client build issue on a brand new install of CentOS 7.6.  It looks like the compiler or something is newer than what's being used in Jenkins (kernel is not), because I'm getting a build failure that seems like it should have never worked on anything.  (So I assume some new check is in play, or something is odd on my node.)

Specifically:

/home/build/master/lustre-release/lustre/obdclass/llog_cat.c: In function ‘llog_cat_prep_log’:

/home/build/master/lustre-release/lustre/obdclass/llog_cat.c:284:42: error: ‘LLOGH_CAT’ undeclared (first use in this function)

 down_read_nested(&cathandle->lgh_lock, LLOGH_CAT);

 ^

/home/build/master/lustre-release/lustre/obdclass/llog_cat.c:284:42: note: each undeclared identifier is reported only once for each function it appears in

/home/build/master/lustre-release/lustre/obdclass/llog_cat.c:285:47: error: ‘LLOGH_LOG’ undeclared (first use in this function)

 down_write_nested(&(*ploghandle)->lgh_lock, LLOGH_LOG);

 

Looking at llog_cat.c; LLOGH_CAT and LLOGH_LOG are not declared until later in the file.  Fix is simple, but it's confusing that this ever built.  No especially recent changes to the file & all the Jenkins builds are working.  (It is probably something about my node - I just wanted to highlight the unusual nature of this in case it means something.)

I'll push a patch soon.

--- Comment (paf, Sun, 9 Dec 2018 23:47:29 +0000) ---
It occurs to me - these are lockdep markers.  This may be some change in lockdep config.  So perhaps my kernel is different.  The headers are 957.1.3, but the kernel itself is just .957.
